# ai-agent

./: .gitignore  main.py  pyproject.toml
agents/: classic_agent.py  demo01.py  demo02.py
mcps/: demo_server.py
services/master/: main.py
services/master/api/v1/: ping.py
services/master/core/middlewares/: logger_middleware.py
services/master/core/servers/: master_server.py
services/master/logger/: __init__.py
services/master/router/v1/: master_router.py
utilis/: logger.py
